2008-10-14  Tor Arne Vestbø  <tavestbo@trolltech.com>

        Reviewed by Simon.

        Fix scrollbar arrows for horizontal scrollbars

        * platform/qt/ScrollbarThemeQt.cpp:
        (WebCore::styleOptionSlider):

2008-10-14  Tor Arne Vestbø  <tavestbo@trolltech.com>

        Reviewed by Simon.

        Use style-painter to draw scrollbars in ScrollbarThemeQt
        
        This has the benefit of setting up the painter properly without
        antialiasing and saving and restoring the brush. It also ensures
        that we use the style of the QWebView over the QApplication style
        if possible.

        * platform/qt/RenderThemeQt.cpp:
        (WebCore::StylePainter::StylePainter):
        (WebCore::StylePainter::init):
        * platform/qt/RenderThemeQt.h:
        * platform/qt/ScrollbarThemeQt.cpp:
        (WebCore::ScrollbarThemeQt::paint):

2008-10-13  David Hyatt  <hyatt@apple.com>

        Add support for CSS transitions on some SVG properties.  This patch is intended to be a guideline
        for how to add support for the rest.

        Reviewed by Oliver Hunt

        * page/animation/AnimationBase.cpp:
        (WebCore::ensurePropertyMap):
        * rendering/style/RenderStyle.h:
        (WebCore::RenderStyle::fillOpacity):
        (WebCore::RenderStyle::setFillOpacity):
        (WebCore::RenderStyle::strokeOpacity):
        (WebCore::RenderStyle::setStrokeOpacity):
        (WebCore::RenderStyle::floodOpacity):
        (WebCore::RenderStyle::setFloodOpacity):

2008-10-13  David Hyatt  <hyatt@apple.com>

        <rdar://problem/6289712> REGRESSION(r37432-37490): Scroll bar is not drawn in Bookmark View, Preferences sheets.

        Fix for disabled scrollbars not painting in Windows Safari.  Make sure that the Windows theme
        implements paintTrackBackground so that when the thumb is not present the track still paints.

        Reviewed by Oliver Hunt

        * platform/ScrollbarThemeComposite.cpp: