@@ -138,6 +138,7 @@ bool ScrollbarThemeQt::paint(Scrollbar* scrollbar, GraphicsContext* graphicsCont
     if (!p.isValid())
       return true;
 
+    p.painter->save();
     QStyleOptionSlider* opt = styleOptionSlider(scrollbar);
     p.painter->setClipRect(opt->rect.intersected(damageRect));
 
@@ -154,6 +155,7 @@ bool ScrollbarThemeQt::paint(Scrollbar* scrollbar, GraphicsContext* graphicsCont
     p.drawComplexControl(QStyle::CC_ScrollBar, *opt);
     opt->rect.moveTo(topLeft);
 #endif
+    p.painter->restore();
 
     return true;
 }
@@ -228,10 +230,13 @@ void ScrollbarThemeQt::paintScrollCorner(ScrollView* scrollView, GraphicsContext
 #if QT_VERSION < 0x040500
     context->fillRect(rect, QApplication::palette().color(QPalette::Normal, QPalette::Window));
 #else
+    StylePainter p(context);
+    if (!p.isValid())
+        return;
+
     QStyleOption option;
     option.rect = rect;
-    QApplication::style()->drawPrimitive(QStyle::PE_PanelScrollAreaCorner,
-            &option, context->platformContext(), 0);
+    p.drawPrimitive(QStyle::PE_PanelScrollAreaCorner, option);
 #endif
 }
 
